--- a/src/app/modules/ClassSubject/student-subject-mark-comp/student-subject-mark-comp.component.html
+++ b/src/app/modules/ClassSubject/student-subject-mark-comp/student-subject-mark-comp.component.html
@@ -1,7 +1,7 @@
-<mat-card>
-    <mat-card-title>Subject Mark Components</mat-card-title>
-    <mat-card-subtitle>&nbsp;</mat-card-subtitle>
-    <mat-card-content>
+<div>
+    <div style="padding:15px 15px 0px 15px;">
+        <div><strong>Mark Components</strong></div>
+
         <alert></alert>
         <form [formGroup]="searchForm">
             <mat-form-field appearance="outline">
@@ -16,7 +16,7 @@
             <mat-form-field appearance="outline">
                 <mat-label>Subject</mat-label>
                 <mat-select formControlName="SubjectId" #SubjectId>
-                    <mat-option value="0">All</mat-option>                    
+                    <mat-option value="0">All</mat-option>
                     <mat-option *ngFor="let p of Subjects" [value]="p.MasterDataId">
                         {{p.MasterDataName}}
                     </mat-option>
@@ -29,7 +29,7 @@
         <div class="example-container mat-elevation-z8">
             <mat-table #table [dataSource]="dataSource" matSort>
 
-               <ng-container matColumnDef="ClassSubject">
+                <ng-container matColumnDef="ClassSubject">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Class Subject </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.ClassSubject}}
@@ -38,33 +38,35 @@
                 <ng-container matColumnDef="SubjectComponent">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Subject Component </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                       {{element.SubjectComponent}}
+                        {{element.SubjectComponent}}
                     </mat-cell>
-                </ng-container>                
+                </ng-container>
                 <ng-container matColumnDef="FullMark">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Full Mark </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field>
-                        <input matInput type="number" [maxlength]="3" [(value)]="element.FullMark" [(ngModel)]="element.FullMark" />
-                    </mat-form-field>
+                            <input matInput type="number" [maxlength]="3" [value]="element.FullMark"
+                                [(ngModel)]="element.FullMark" />
+                        </mat-form-field>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="PassMark">
                     <mat-header-cell *matHeaderCellDef mat-sort-header> Pass Mark </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                    <mat-form-field>
-                        <input matInput type="number" [maxlength]="3" [(value)]="element.PassMark" [(ngModel)]="element.PassMark" />
-                    </mat-form-field>
+                        <mat-form-field>
+                            <input matInput type="number" [maxlength]="3" [value]="element.PassMark"
+                                [(ngModel)]="element.PassMark" />
+                        </mat-form-field>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                        [checked]="element.Active">
-                    </mat-checkbox>
+                            [checked]="element.Active">
+                        </mat-checkbox>
                     </mat-cell>
-                </ng-container>     
+                </ng-container>
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let element">
@@ -77,5 +79,4 @@
                 <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
             </mat-table>
         </div>
-    </mat-card-content>
-</mat-card>
+    </div>
