--- a/src/app/modules/ClassSubject/subject-types/subject-types.component.html
+++ b/src/app/modules/ClassSubject/subject-types/subject-types.component.html
@@ -1,7 +1,7 @@
-<mat-card>
-    <mat-card-title>Subject Types</mat-card-title>
-    <mat-card-subtitle>&nbsp;</mat-card-subtitle>
-    <mat-card-content>
+<div>
+    <div style="padding:15px 15px 0px 15px;">
+        <div><strong>Subject Types</strong></div>
+
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <alert></alert>
         <mat-table #table [dataSource]="dataSource">
@@ -10,22 +10,23 @@
                 </mat-header-cell>
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                     <mat-form-field [style.width.px]="150">
-                        <input matInput [(value)]="element.SubjectTypeName" [(ngModel)]="element.SubjectTypeName">
-                    </mat-form-field>                    
+                        <input matInput [value]="element.SubjectTypeName" [(ngModel)]="element.SubjectTypeName">
+                    </mat-form-field>
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="SelectHowMany">
                 <mat-header-cell *matHeaderCellDef> No. Of Subject to Select </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field [style.width.px]="150">
-                        <input matInput [(value)]="element.SelectHowMany" [(ngModel)]="element.SelectHowMany">
+                        <input matInput [value]="element.SelectHowMany" [(ngModel)]="element.SelectHowMany">
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)" [checked]="element.Active==1?true:false">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                        [checked]="element.Active==1?true:false">
                     </mat-checkbox>
                 </mat-cell>
             </ng-container>
@@ -36,7 +37,8 @@
                     </button>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button [disabled]="loading" [disabled]="CurrentPagePermission=='Read'" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
+                    <button [disabled]="loading" [disabled]="CurrentPagePermission=='Read'" matTooltip="save"
+                        mat-mini-fab (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
                     </button>
                 </mat-cell>
@@ -44,5 +46,5 @@
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
         </mat-table>
-    </mat-card-content>
-</mat-card>
+    </div>
+</div>
