--- a/src/app/modules/studentexam/exams/exams.component.html
+++ b/src/app/modules/studentexam/exams/exams.component.html
@@ -19,7 +19,7 @@
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline" [style.width.px]="200">
                             <mat-label>Start Date</mat-label>
-                            <input [(ngModel)]="element.StartDate" [(value)]="element.StartDate" matInput [matDatepicker]="StartDate" autocomplete="off">
+                            <input [(ngModel)]="element.StartDate" [value]="element.StartDate" matInput [matDatepicker]="StartDate" autocomplete="off">
                             <mat-datepicker-toggle matSuffix [for]="StartDate"></mat-datepicker-toggle>
                             <mat-datepicker #StartDate></mat-datepicker>
                         </mat-form-field>
@@ -30,7 +30,7 @@
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline" [style.width.px]="200">
                             <mat-label>End Date</mat-label>
-                            <input [(value)]="element.EndDate" [(ngModel)]="element.EndDate" matInput [matDatepicker]="EndDate" autocomplete="off">
+                            <input [value]="element.EndDate" [(ngModel)]="element.EndDate" matInput [matDatepicker]="EndDate" autocomplete="off">
                             <mat-datepicker-toggle matSuffix [for]="EndDate"></mat-datepicker-toggle>
                             <mat-datepicker #EndDate></mat-datepicker>
                         </mat-form-field>
